# LearnWebGPU-Code

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  ResourceManager.cpp  ResourceManager.h  bdev.sh  imgui.ini  implementations.cpp  main.cpp  main_backup.cpp  main_old.cpp  tiny_obj_loader.h
diffs/: mine.wgsl  mymats.cpp  ref.txt  refmats.cpp
imgui/: CMakeLists.txt
resources/: shader.wgsl
